--- a/frontend/src/js/views/dashboard.html
+++ b/frontend/src/js/views/dashboard.html
@@ -1,7 +1,4 @@
 <div class="oj-hybrid-padding">
-  <h1>Dashboard Content Area</h1>
-  <div>
-      To change the content of this section, you will make edits to the dashboard.html file located in the /js/views folder.
-  </div>
+  <h1>Map</h1>
 	<div id="map"></div>
 </div>
