Implement POC for support of multiple GPS devices

--- a/frontend/src/js/views/dashboard.html
+++ b/frontend/src/js/views/dashboard.html
@@ -1,3 +1,8 @@
 <div class="oj-hybrid-padding">
+	<oj-c-select-single
+		data="[[deviceProvider]]"
+		item-text="label"
+		on-value-changed="[[onGpsDeviceChange]]"
+		label-hint="GPS Device"></oj-c-select-single>
 	<div id="map"></div>
 </div>
